# SurfWeerWorkflow

./: .env.example  .gitignore  README.md  noordwijk-surf-alert-plan-v3.md  pyproject.toml  requirements.txt  research_academic_ml.md  research_benchmark_comparison.md  research_gap_analysis.md  research_industry_models.md  research_master_improvement_plan.md  research_pro_forecaster_methods.md  research_tobias_methodology.md  test_sms.py
.github/: dependabot.yml
.github/workflows/: check.yml  rebuild-baseline.yml  run-validation.yml  smoke-test.yml
data/: forecast_features.jsonl  learned_params.json  monthly_budget.json  seasonal_baseline.json  state.json
data/sms_archive/: 2026-05.jsonl  2026-06.jsonl  2026-07.jsonl
research/: academic_ml.md  benchmark_comparison.md  gap_analysis.md  industry_models.md  master_improvement_plan.md  noordwijk-surf-alert-plan-v3.md  pro_forecaster_methods.md  reference_methodology.md  wave_physics_benchmark.md
scripts/: calibrate.py  compare_wave_models.py  diag_windows.py  gen_digest_preview.py  ingest_forecaster_message.py  ingest_reference_message.py  ingest_tobias_message.py  probe_marine_models.py  probe_marine_subfields.py  probe_max_horizon.py  run_validation_backtest.py  send_real_test_sms.py  send_test_notification.py  verify_archive_fix.py  verify_extended_horizon.py  verify_spectrum_on_fallback.py
src/: config.py  main.py  util.py  util_files.py
src/alerts/: detectors.py  engine.py
src/baseline/: seasonal.py
src/data/: models.py
src/data/sources/: open_meteo.py  rws.py
src/llm/: generator.py  sms_fallback.py  sms_formatting.py  sms_input.py  validator.py
src/llm/prompts/: digest_system.md
src/notify/: __init__.py  mail.py  ntfy.py  twilio.py
src/scoring/: bias_correction.py  context.py  daylight.py  deconstruct.py  hourly.py  swell_direction.py  tide.py  trigger_T1.py  wave_modifiers.py  wind.py  windows.py
src/sms/: messagebird.py  twilio.py
tests/: conftest.py  test_bias_correction.py  test_calibrate.py  test_detectors.py  test_engine_state.py  test_generator.py  test_ingest_sent_verdict.py  test_notify.py  test_open_meteo.py  test_orchestration.py  test_rws.py  test_scoring.py  test_trigger_T1.py  test_util_files.py  test_validation.py  test_validator.py
